# VAM-alpha-0

./: .gitignore  CMakeLists.txt  PROJECT_BRIEF.md  ROADMAP.md  TECHNICAL_PLAN.md
.github/workflows/: windows-build.yml
Assets/Shaders/: cube.frag
Docs/Systems/: Basic3DSandbox.md  BuildingPlacement.md  CombatEnemyAI.md  CraftingSystem.md  ItemsInventory.md  PlayerControllerInteraction.md  ResourceGathering.md
Engine/Core/: Input.cpp  Input.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Engine/Math/: MathTypes.h  Transform.h
Engine/Renderer/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
Game/Core/: BuildSystem.cpp  BuildSystem.h  BuildingPiece.h  CraftingManager.cpp  CraftingManager.h  DropTable.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GatherableNode.cpp  GatherableNode.h  Hotbar.cpp  Hotbar.h  Inventory.cpp  Inventory.h  ItemDatabase.cpp  ItemDatabase.h  ItemDefinition.h  ItemStack.h  Main.cpp  Player.cpp  Player.h  Recipe.h  SceneObject.h
Tests/: EngineCoreTests.cpp
